finishes part of lit review

--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -80,25 +80,35 @@ of the 58 climate action plans, roughly two-thirds of them attend to either
 justice or equity, while the final third do not discuss either concept. The
 researchers also found that recency, high levels of inequality within a city,
 and public engagement were determining factors in whether a climate action plan
-addressed justice. Further, climate action plans developed by cities prefer
-``equity'' over ``justice'' because discourses tend to focus on the superficial
+addressed justice. With greater public engagement leading to greater emphasis on
+justice. Further, climate action plans developed by cities prefer ``equity''
+over ``justice'' because discourses tend to focus on the superficial
 distributions of benefits and burdens rather than accounting for structural
 sources of injustice \cite{diezmartinez_us_2022}.
 
 Another study reviewed 60 energy transition ``visioning documents'' prepared by
 non-profits and advocacy organizations in the United States, rather than formal
 planning documents developed by city officials \cite{elmallah_frontlining_2022}.
-This study found 6 principles of planning for energy justice.
+From these visioning documents, this study derived six principles of planning for energy justice.
 \begin{enumerate}
     \item Being place-based --- recognizing that each city's situation is unique
     and that there are no universal solutions.
-    \item Addressing the root cause and legacies of inequality
+    \item Addressing the root cause and legacies of inequality --- energy policy
+    should simultaneously address other social crises and prioritize the needs
+    of those most impacted by systems of inequality.
     \item Shifting the balance of power from existing forms of energy governance
+    --- related to the procedural justice tenets of representation, information,
+    and consent.
     \item Creating new, cooperative, and participatory systems of energy
-    governance and ownership
-    \item Adopting a rights-based approach
-    \item Rejecting false solutions
+    governance and ownership --- democratizing energy away from government or
+    corporate control to community control.
+    \item Adopting a rights-based approach --- the right to energy, labor
+    rights, and the right to remain and build community.
+    \item Rejecting false solutions --- solutions that focus on carbon reduction
+    at the expense of political, economic, or social justice.
 \end{enumerate}
+The authors argue that these six principles should be used together when crafting 
+just energy policy.
 
 \subsection{Modeling for justice}
 
