updates emissions plot to include IL, adds PCAP, and starts planning processes section

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -21209,3 +21209,15 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {english},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6PP762DM/Exelon_Illinois_Nuclear_Fleet_Audit_Report_REDACTED_21-002.pdf:application/pdf},
 }
+
+@report{kibbey_state_2024,
+	location = {Illinois},
+	title = {State of Illinois: Priority Climate Action Plan},
+	url = {https://www.epa.gov/system/files/documents/2024-03/illinois-priority-climate-action-plan.pdf},
+	pages = {98},
+	institution = {Illinois Environmental Protection Agency},
+	author = {Kibbey, J.C.},
+	date = {2024-03-01},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/F6GPNNAI/2024 - State of Illinois Priority Climate Action Plan.pdf:application/pdf},
+}
