--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -89,7 +89,8 @@ sources of injustice \cite{diezmartinez_us_2022}.
 Another study reviewed 60 energy transition ``visioning documents'' prepared by
 non-profits and advocacy organizations in the United States, rather than formal
 planning documents developed by city officials \cite{elmallah_frontlining_2022}.
-From these visioning documents, this study derived six principles of planning for energy justice.
+From these visioning documents, this study derived six principles of planning
+for energy justice.
 \begin{enumerate}
     \item Being place-based --- recognizing that each city's situation is unique
     and that there are no universal solutions.
@@ -107,8 +108,8 @@ From these visioning documents, this study derived six principles of planning fo
     \item Rejecting false solutions --- solutions that focus on carbon reduction
     at the expense of political, economic, or social justice.
 \end{enumerate}
-The authors argue that these six principles should be used together when crafting 
-just energy policy.
+The authors argue that these six principles should be used together when
+crafting just energy policy.
 
 \subsection{Modeling for justice}
 
@@ -339,8 +340,8 @@ energy-related entities that operate in Illinois.
 \end{enumerate}
 
 \noindent
-Illinois legislators passed the \ac{ceja} bill \cite{harmon_climate_2021} which
-did several things for Illinois such as
+In 2021, Illinois legislators passed the \ac{ceja} bill
+\cite{harmon_climate_2021} which did several things for Illinois such as
 \begin{enumerate}
     \item setting a target of 100\% clean energy by 2050,
     \item establishing a ``Zero Emissions Credit'' to support financially
@@ -348,28 +349,30 @@ did several things for Illinois such as
     \item equity-focused workforce development programs, including a \acf{mes}
     for \ac{ipa} administered programs.
 \end{enumerate}
-In essence, \ac{ceja} constitutes the electricity sector portion of Illinois'
-climate action plan.
-
-\subsection{Champaign and Urbana, Illinois}
-Champaign and Urbana are neighboring cities surrounding \ac{uiuc}, which drives
-most of the economic activity in the area. Both cities lie in the \ac{miso}
-region of Illinois and receive electricity through the regulated utility,
-Ameren. Although they share some resources they have not coordinated on a shared
-climate action plan. Additionally, neither city has a current climate action
-plan. Urbana's most recent climate action plan spanned 2015 through 2020
-\cite{ryan_climate_2014} and Champaign's ``Growing Greener'' plan has not been
-updated since 2013 \cite{knight_champaign_2013}. Both plans suggest purchasing
-\acp{rec} to cover 100\% of electricity-use through \ac{mca} with an \ac{ares}.
-However, Urbana's plan goes somewhat further by identifying strategies to
-purchase bundled \acp{rec}\footnote{A \ac{rec} can either be \textit{bundled} or
-\textit{unbundled}. The former are \acp{rec} that are packaged with the specific
-megawatthour that generated the \ac{rec}. The latter refers to \acp{rec} that
-are traded separately from energy and are generally less expensive.} and install
-\ac{btm} on city facilities. Both climate plans mention ``social equity'' and
-although equity is never defined, mentions of equity are concomitant with access
-to services and opportunities. This suggests a focus on the distributive aspect
-of justice described in Section \ref{section:energy-justice}.
+Building on this foundational legislation, Illinois published its \ac{pcap} in
+2024. This climate plan identifies economy-wide strategies for Illinois to meet
+its commitment to the Paris Climate Agreement by halving its total carbon
+emissions by 2030 (relative to 2005 levels) \cite{kibbey_state_2024}. Figure
+\ref{fig:uiuc-emissions} shows Illinois trajectory for decarbonization. Along
+with setting specific targets to produce 50\% clean electricity by 2040 and
+100\% by 2050, \ac{pcap} outlines the need for statewide clean energy modeling
+and asserts that ``energy modeling will help ensure that Illinois has clean
+energy resources to backfill retiring fossil fuel plants and stay the course for
+\ac{ceja}'s decarbonization timeline'' \cite{kibbey_state_2024}. \ac{pcap} does
+not define the terms ``justice'' or ``environmental justice,'' but it does
+describe two types of ``Equity Investment Eligible Communities'':
+\begin{enumerate}
+    \item \textit{Environmental justice communities} that were identified by
+    U.S. EPA as having higher risk of exposure to pollution based on
+    environmental and socioeconomic factors.
+    \item \textit{Restore. Reinvest. Renew. (R3 Areas)}, communities that have
+    been harmed by violence, excessive incarceration, and economic
+    disinvestment.
+\end{enumerate}
+These equity eligible communities are intended to receive at least 40\% of
+benefits from solar energy and energy efficiency programs, workforce development
+and contractor accelerator programs, electric vehicle deployment, and utility
+infrastructure planning \cite{kibbey_state_2024}.
 
 \subsection{\acf{uiuc}} 
 
@@ -400,7 +403,8 @@ recycling, and clean transportation.
 \begin{figure}[ht!]
     \centering
     \resizebox{0.75\columnwidth}{!}{\input{figures/07_interview_chapter/uiuc_emissions_plot.pgf}}
-    \caption{Annual emissions and targets at \ac{uiuc} from 2008 to 2050.}
+    \caption{Annual emissions and targets for the state of Illinois and
+    \ac{uiuc} from 2008 to 2050.}
     \label{fig:uiuc-emissions}
 \end{figure}
 The \ac{icap} defines sustainability as ``meeting the needs of the present
@@ -412,6 +416,26 @@ equity, an aspect of distribution justice, described in Section
 historically marginalized and underserved communities. This objective
 demonstrates some consideration for recognition justice as well.
 
+\subsection{Champaign and Urbana, Illinois}
+Champaign and Urbana are neighboring cities surrounding \ac{uiuc}, which drives
+most of the economic activity in the area. Both cities lie in the \ac{miso}
+region of Illinois and receive electricity through the regulated utility,
+Ameren. Although they share some resources they have not coordinated on a shared
+climate action plan. Additionally, neither city has a current climate action
+plan. Urbana's most recent climate action plan spanned 2015 through 2020
+\cite{ryan_climate_2014} and Champaign's ``Growing Greener'' plan has not been
+updated since 2013 \cite{knight_champaign_2013}. Both plans suggest purchasing
+\acp{rec} to cover 100\% of electricity-use through \ac{mca} with an \ac{ares}.
+However, Urbana's plan goes somewhat further by identifying strategies to
+purchase bundled \acp{rec}\footnote{A \ac{rec} can either be \textit{bundled} or
+\textit{unbundled}. The former are \acp{rec} that are packaged with the specific
+megawatthour that generated the \ac{rec}. The latter refers to \acp{rec} that
+are traded separately from energy and are generally less expensive.} and install
+\ac{btm} solar panels on city facilities. Both climate plans mention ``social
+equity'' and although equity is never defined, mentions of equity are
+concomitant with access to services and opportunities. This suggests a focus on
+the distributive aspect of justice described in Section
+\ref{section:energy-justice}.
 
 \subsection{Naperville, Illinois}
 Naperville is an affluent suburb of Chicago, Illinois that straddles Will and
@@ -508,8 +532,9 @@ contractually prohibited from building certain \ac{btm} resources.
 
 \section{Results}
 This section explores the results from the analysis of thirteen interviews. It
-is organized according to \textcolor{red}{X} number of themes derived from
-thematic analysis.
+is organized according to the five themes derived from thematic analysis. Table
+\ref{tab:themes} summarizes the themes and their sub-categories presented in
+this section.
 
 \begin{table}[ht!]
     \centering
@@ -520,11 +545,46 @@ thematic analysis.
 \end{table}
 
 \subsection{Existing planning processes}
+Most of the interviewees could not speak to the process of developing the
+\acf{pcap} for the state of Illinois. However, the \ac{pcap} itself outlines
+several aspects of the planning process, which coordinated several Illinois
+governmental agencies and was ``rooted'' in stakeholder consultation."
+
+\begin{quote}
+    \blockcquote[10]{kibbey_state_2024}{Development of the plan also included
+    consultation on the CPRG with multiple stakeholders, including: community
+    organizations, including organizations representing disadvantaged
+    communities; non-governmental organizations with expertise in climate
+    mitigation; private businesses; higher education institutions; and trade
+    associations. To identify market barriers to the equitable GHG emission
+    reductions in Illinois, the Illinois Climate Bank, in partnership with other
+    state agencies, held a series of stakeholder meetings, small group meetings
+    and workshops, and virtual presentations, throughout 2023 and early 2024,
+    with more than 150 different entities to get a broad perspective on market
+    gaps.}
+\end{quote}
+
+Interviewee IP1 confirms the impact of this inclusive process during the
+development of the \ac{ceja} legislation
+\begin{quote}
+     I'll tell you that the way that we developed the schedule for the power
+     plants, the coal and gas fire power plants, was specifically something that
+     came because we had the frontline communities at the table. Because their
+     main concern was not necessarily the greenhouse gas reductions. It was, ``I
+     live in a neighborhood that has a coal-fired power plant in it, and I've
+     got soot on my car, and I've got all of the negative outcomes from living
+     next to a coal-fired power plant or a gas beaker plant.'' And their desire
+     was to have the plants gone. And so rather than say, ``yeah, you can stay open
+     forever, you just have to buy, you know, enough carbon credits to be able
+     to stay open.'' We went a different way. And [\dots] that's specifically
+     because people in frontline communities were involved (Interview IP1).
+\end{quote}
+
 \subsection{Energy model usage}
 
 None of the municipalities considered in this study, Naperville, Champaign,
 Urbana, nor \ac{uiuc}, use \acp{esom} to guide energy planning and investment
-decisions. At the state level, the \ac{ipa} use modeling \textit{results} to
+decisions. At the state level, the \ac{ipa} uses modeling \textit{results} to
 inform policy recommendations but the modeling itself was outsourced to an
 external consultant. However, \ac{ipa} studies typically employ \acp{esom} such
 as Aurora or GE's MARS model\footnote{Both Aurora and GE MARS were excluded from
