--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -110,5 +110,6 @@
 \acro{rec}[REC]{renewable energy credit}
 \acro{bem}[BEM]{building energy model}
 \acro{gui}[GUI]{graphical user interface}
+\acro{pcap}[PCAP]{Priority Climate Action Plan}
 
 
