updates the existing process section

--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -111,5 +111,6 @@
 \acro{bem}[BEM]{building energy model}
 \acro{gui}[GUI]{graphical user interface}
 \acro{pcap}[PCAP]{Priority Climate Action Plan}
+\acro{swa}[SWATeam]{Sustainability Working Advisory Team}
 
 
