updates energy model usage section

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -21221,3 +21221,19 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {english},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/F6GPNNAI/2024 - State of Illinois Priority Climate Action Plan.pdf:application/pdf},
 }
+
+@report{gifford_renewable_2011,
+	location = {Golden, {CO}, United States},
+	title = {Renewable Energy Cost Modeling: A Toolkit for Establishing Cost-Based Incentives in the United States},
+	url = {https://www.osti.gov/biblio/1219218},
+	shorttitle = {Renewable Energy Cost Modeling},
+	pages = {5152, NREL/SR--6A20--51093, 1219218},
+	number = {5152, {NREL}/{SR}--6A20-51093, 1219218},
+	institution = {National Renewable Energy Laboratory ({NREL})},
+	author = {Gifford, Jason and Grace, Robert and Rickerson, Wilson},
+	urldate = {2025-08-08},
+	date = {2011-05-01},
+	langid = {english},
+	doi = {10.2172/1219218},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/DHHU2MT6/USDOE Office of Energy Efficiency and Renewable Energy (EERE), Renewable Power Office. Wind Energy Technologies Office et al. - 2011 - Renewable Energy Cost Modeling A Toolkit for Establishing Cost-Based Inc.pdf:application/pdf},
+}
