--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -112,5 +112,7 @@
 \acro{gui}[GUI]{graphical user interface}
 \acro{pcap}[PCAP]{Priority Climate Action Plan}
 \acro{swa}[SWATeam]{Sustainability Working Advisory Team}
+\acro{crest}[CREST]{Cost of Renewable Energy Spreadsheet Tool}
+\acro{iclei}[ICLEI]{International Council for Local Environmental Initiatives}
 
 
