--- a/docs/tables/thematic-analysis.tex
+++ b/docs/tables/thematic-analysis.tex
@@ -1,29 +1,35 @@
-\begin{tabular}{ll}
+\begin{tabular}{lll}
     \toprule
-    Categories & Themes \\
+    Categories & Themes & Section \\
     \midrule
-    Community Engagement&\multirow{5}{*}{Existing planning processes}\\
-    Decision-making process&\\
-    Planning process&\\
-    Objectives&\\
-    Limits to planning&\\
+    Community Engagement&\multirow{5}{*}{Existing planning
+    processes}&\multirow{5}{*}{\ref{section:planning-processes}}\\
+    Decision-making process&&\\
+    Planning process&&\\
+    Objectives&&\\
+    Limits to planning&&\\
     \midrule
-    Energy modeling views&\multirow{4}{*}{Energy model usage}\\
-    Examples of energy modeling&\\
-    Building energy models&\\
-    Limitations to energy modeling&\\
+    Distributive Justice&\multirow{5}{*}{Planning for
+    justice}&\multirow{5}{*}{\ref{section:muni-justice}}\\
+    Procedural Justice&&\\
+    Recognition Justice&&\\
+    Justice definitions&&\\
+    Justice programs&&\\
     \midrule
-    Distributive Justice&\multirow{5}{*}{Planning for justice}\\
-    Procedural Justice&\\
-    Recognition Justice&\\
-    Justice definitions&\\
-    Justice programs&\\
+    Energy modeling views&\multirow{4}{*}{Energy model
+    usage}&\multirow{4}{*}{\ref{section:muni-model-usage}}\\
+    Examples of energy modeling&&\\
+    Building energy models&&\\
+    Limitations to energy modeling&&\\
     \midrule
-    Energy Market&\multirow{2}{*}{Structural barriers to modeling}\\
-    \Acl{mca}&\\
+    Energy Market&\multirow{3}{*}{Structural
+    barriers}&\multirow{3}{*}{\ref{section:structural-barriers}}\\
+    \Acl{mca}&&\\
+    Barriers to ownership&&\\
     \midrule
-    Positive feedback&\multirow{3}{*}{Assessing \ac{osier}}\\
-    Feature request or change&\\
-    Usage barriers&\\
+    Positive feedback&\multirow{3}{*}{Assessing
+    \ac{osier}}&\multirow{3}{*}{\ref{section:assess-osier}}\\
+    Feature request or change&&\\
+    Usage barriers&&\\
     \bottomrule
 \end{tabular}
