organizes the interview chapter

--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -114,5 +114,6 @@
 \acro{swa}[SWATeam]{Sustainability Working Advisory Team}
 \acro{crest}[CREST]{Cost of Renewable Energy Spreadsheet Tool}
 \acro{iclei}[ICLEI]{International Council for Local Environmental Initiatives}
+\acro{irp}[IRP]{integrated resource plan}
 
 
