extends the structural barriers section

--- a/docs/7-interviews/76-results.tex
+++ b/docs/7-interviews/76-results.tex
@@ -171,7 +171,6 @@ dedicated person or department within governing institutions. This suggests
 there is more work to be done integrating energy justice and energy
 modeling/policy-making}
 
-
 \subsection{Energy model usage}
 \label{section:muni-model-usage}
 
@@ -228,13 +227,13 @@ upcoming analysis from Illinois EPA as described in the \ac{pcap}
     the development of projects at certain sizes, given certain inputs.
 \end{quote}
 
-Along with acknowledging
-the overall limits of models, interviewees suggested that municipalities do not use 
-\acp{esom} due to a lack of staff capacity and expertise, a lack of financial resources,
-and difficulty acquiring reliable input data. In addition to these barriers, the 
-interviews revealed some structural barriers that not only make using \ac{esom}
-challenging, but severely restrict municipalities from developing a vision for their
-own energy futures at all. The next section discusses these barriers.
+Along with acknowledging the overall limits of models, interviewees suggested
+that municipalities do not use \acp{esom} due to a lack of staff capacity and
+expertise, a lack of financial resources, and difficulty acquiring reliable
+input data. In addition to these barriers, the interviews revealed some
+structural barriers that not only make using \ac{esom} challenging, but severely
+restrict municipalities from developing a vision for their own energy futures at
+all. The next section discusses these barriers.
 % \block
 
 \subsection{Structural barriers}
@@ -243,35 +242,81 @@ own energy futures at all. The next section discusses these barriers.
 This section describes ``structural barriers'' identified during the interviews.
 These barriers relate to the use of energy models --- going beyond the
 observation in Section \ref{section:muni-model-usage} that municipalities do not
-seem to use models --- and surfaces the underlying conditions that prevent the use of
-\acp{esom}. These barriers also relate to the structures that produce various
-injustices and create friction for communities that want to exercise agency over
-their energy choices. I began this study with the assumption that 
+seem to use models --- and surfaces the underlying conditions that prevent the
+use of \acp{esom}. These barriers also relate to the structures that produce
+various injustices and create friction for communities that want to exercise
+agency over their energy choices. I began this study by assuming that
+municipalities needed betters tools to develop energy visions for their
+communities, and that municipal governments would be the ones employing
+\acp{esom}. Now, it appears these assumptions do not fully hold.
 
-The first barrier comes from the structure of energy markets (\textcolor{red}{is ``first''
-correct, here? I think all of them are related to energy markets in some form\dots}). 
+The first barrier comes from the structure of energy markets (\textcolor{red}{is
+``first'' correct, here? I think all of them are related to energy markets in
+some form\dots}). 
 
-As shown in Figure \ref{fig:illinois-flow-chart}, consumers and municipalities cannot 
-directly participate 
+As shown in Figure \ref{fig:illinois-flow-chart}, consumers and municipalities
+cannot directly participate electricity markets. Instead, there are myriad
+entities that broker electricity purchases and thus these entities control most
+energy supply decisions. For municipalities that do not have their own electric
+utility, which is vast majority of municipalities in Illinois, these entities
+include various \ac{ares}, \acp{iou}, the \ac{ipa} --- which implements policy
+directives from the Illinois legislature --- and the \ac{icc} which regulates
+Illinois' competitive electricity markets. Municipalities that do have their own
+electric utility frequently give control of their energy supply decisions to
+\ac{imea} because they do not have the staff capacity to understand and
+participate in energy markets, do not have the resources to own their own
+generation, or do not want to own their own generation because it is ``expensive
+and complicated (Interviewee IA2).''
 
+Let us consider the first scenario where a municipality is served by one of the
+two major \acp{iou} in Illinois: Ameren and ComEd. There are three structural
+barriers to making energy supply choices: Access to data about residents' energy
+usage in a municipality, inadequate grid infrastructure to support \ac{btm}
+resources, and \acf{mca}.
+
+The first barrier is quite simple. Since municipalities do not control the
+delivery of electricity to their residents, they do not have access to the their
+energy usage data. This barrier challenges both energy modeling and distributive
+justice. One, energy models require electricity demand data to run. Two, details
+about residents' electricity bills could give insight about energy burden in a
+community.
+
+The second barrier is related to aging infrastructure and the ways \acp{iou} can
+generate profit. Interviewee IP2 put it simply
+\begin{quote}
+     [T]here are other ways to help make it easier for people to get into
+     \acs{der} ownership, one of the things that I think is impeding people in
+     some areas, particularly in low income areas, is that the grid is just not
+     up to par. It hasn't been properly maintained in some places. And so you've
+     got an antiquated grid, which because of its age and poor maintenance, it's
+     just not up to the task of accommodating a lot of behind the meter stuff
+     (Interviewee IP2).
+\end{quote}
+Since \acfp{iou} are regulated by the \ac{icc} they cannot profit from the
+delivery of electricity, depsite having monopoly control over electricity and
+distribution. However, \acp{iou} are allowed to recover their expenses.
+Therefore, \acp{iou} can generate profit when they build new infrastructure.
+This makes it difficult for municipalities that would like to encourage
+residents to install \ac{btm} solar to do so. ``[\acp{iou} are] reluctant to want to enable
+the use of [\ac{btm}] stuff like that because it means less investment they have
+to make (Interviewee IP2).''
 
 % challenges with MCA
-Municipalities 
-can improve their bargaining position by aggregating their constituents' electricity
-demand and negotiating on behalf of the entire community in a process called \ac{mca}.
-Although \ac{mca} allows communities to (sometimes) negotiate a better electricity 
-price and (sometimes) benefit from cleaner electricity with \ac{rec} purchases, energy
-supply choices are still limited to those \ac{ares} that submit a bid to supply electricity
-(or taking the default supply). Further, \acp{rec} generated through \ac{mca} do not have
+Municipalities can improve their bargaining position by aggregating their
+constituents' electricity demand and negotiating on behalf of the entire
+community in a process called \ac{mca}. Although \ac{mca} allows communities to
+(sometimes) negotiate a better electricity price and (sometimes) benefit from
+cleaner electricity with \ac{rec} purchases, energy supply choices are still
+limited to those \ac{ares} that submit a bid to supply electricity (or taking
+the default supply). Further, \acp{rec} generated through \ac{mca} do not have
 \textit{additionality} \cite{illinois_power_agency_municipal_2023}. That is, 
 
+
+In the second scenario, where a municipality does have its own electric
+utility...
 \begin{enumerate}
-    \item Lack of access to energy use data from municipal constituents
-    (Champaign/Urbana)
     \item Engaged in contracts that delay or prohibit investment in certain
     \ac{btm} resources.
-    \item Inadequate grid infrastructure to support \ac{btm} resources.
-    \item \dots
 \end{enumerate}
 
 \subsection{Assessing \ac{osier}}
@@ -361,5 +406,5 @@ Finally, interviewees identified some features that would be valuable for an
 measures, such as improvements to building heating envelopes or switching to LED
 lights, was the most frequently mentioned feature. Electric vehicle charging and
 distributed energy resources were the second most requested feature.
-Interviewees also expressed interest  policy levers such as time of use rates
-for electricity or net energy metering.
+Interviewees also expressed interest policy levers such as time of use rates for
+electricity or net energy metering.
