--- a/docs/7-interviews/77-discussion.tex
+++ b/docs/7-interviews/77-discussion.tex
@@ -30,4 +30,8 @@ Benefits include
     \item It seems like municipal interviewees would like to use the \textit{results} from a model
     such as \ac{osier}, but do not necessarily want to conduct the modeling themselves. With the
     notable exception of \ac{nest}, who seemed enthusiastic about using the model.
+    \item Although Illinois uses modeling results, as described in \ac{pcap}, and its regulating agencies
+    have experience with public engagement and the reports from these modeling efforts are subject to public
+    comments before being finalized, these two activies are distinct. Illinois has an opportunity to 
+    employ participatory modeling to develop robust visions for its energy future.
 \end{enumerate}
